# pirata

./: .gitignore  CLAUDE.md  Cargo.toml  MEMORY_DEEP_001.md  MEMORY_DEEP_002.md  MEMORY_DEEP_003.md  MEMORY_DEEP_004.md  README.md  SKILL.md
.claude/commands/: pirata.md
docs/brainstorms/: 2026-04-24-imdb-local-pirata-coupling-requirements.md  2026-04-24-kb-rag-multimodal-frames-requirements.md
docs/plans/: 2026-04-24-001-feat-hunter-py-orchestrator-plan.md  2026-04-24-002-feat-auto-contact-sheets-plan.md  2026-04-24-003-feat-kb-rag-multimodal-frames-plan.md  2026-04-24-004-feat-imdb-local-pirata-coupling-plan.md  2026-04-25-005-feat-kh-export-surface-plan.md  2026-04-26-006-fix-pipeline-autonomy-plan.md  2026-04-26-007-feat-imdb-kb-enrichment-plan.md  2026-04-26-008-fix-imdb-vote-tie-breaker-plan.md  2026-04-26-009-fix-kh-export-replacement-handoff-plan.md  2026-04-26-010-fix-kh-export-symmetric-errors-plan.md  2026-04-26-011-fix-kh-export-json-hardening-plan.md  2026-04-26-012-feat-kh-export-degraded-build-signal-plan.md
docs/prompts/: 2026-04-25-kh-ingest-FIRE-v2.md  2026-04-25-kh-ingest-FIRE.md  2026-04-25-kh-ingest-v2-eng-codex.md  2026-04-25-kh-ingest-v2-eng.md  2026-04-25-kh-ingest-v2.md  2026-04-26-codex-review-plan-010.md  2026-04-26-kh-ingest-FIRE-v3.md
kb/: manifest.jsonl
scripts/: build_kh_export.py  contact_sheet.py  imdb_ingest.py  imdb_kb_enrich.py  imdb_lookup.py  queue.py  sheets_sweep.py
src/: app.rs  cache.rs  cli.rs  config.rs  history.rs  lib.rs  main.rs  model.rs  output.rs  setup.rs  state.rs  tui.rs  util.rs
tasks/: lessons.md
(+33 files in other folders)
