[package]
name = "pirate-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
crossterm = "0.28"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
directories = "6.0"
open = "5.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tokio = { version = "1.45", features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = "0.8"
urlencoding = "2.1"
