[package]
name = "pirata"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
directories = "6.0"
indicatif = "0.17"
open = "5.3"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tokio = { version = "1.45", features = ["fs", "macros", "net", "process", "rt-multi-thread", "time"] }
toml = "0.8"
urlencoding = "2.1"
